Style: Add overflow-hidden to body and fix You Picked text

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,6 @@
   }
 
   body {
-    @apply h-[100dvh] w-[100dvw]  bg-[radial-gradient(circle_at_top,_var(--tw-gradient-stops))] from-radial-from to-radial-to bg-no-repeat lg:h-[768px] lg:w-[1366px];
+    @apply h-[100dvh] w-[100dvw]  overflow-hidden bg-[radial-gradient(circle_at_top,_var(--tw-gradient-stops))] from-radial-from to-radial-to bg-no-repeat lg:h-[768px] lg:w-[1366px];
   }
 }
